--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/280833cb08.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="IMAGES/favIcon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favIcon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="logo">
-      <img src="IMAGES/headerLogo.png" alt="">
+      <img src="headerLogo.png" alt="">
     </div>
 
 
