--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="categoryIcon">
-      <i class="far fa-list-alt"></i>
+      <i id = "setIt" class="far fa-list-alt"></i>
     </div>
 
 
