--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="menuIcon">
         <i class="fas fa-bars"></i>
       </div>
-      <div class="menuItems">
+      <div class="menuItems swing-in-left-fwd ">
         <button class="cancelMenu"><i class="fa fa-times" aria-hidden="true"></i></button>
         <p class="profileJS">Profile</p>
         <hr>
@@ -95,7 +95,7 @@
   <main>
     <!-- inside sections areYouSure and profile (total 2 divs) comes which shows or overlap the other changable divs -->
     <section>
-      <div class="areYouSure">
+      <div class="areYouSure scale-in-top">
         <div class="crossBtnh">
           <span>Please do Login First !</span>
           <button><i class="fa fa-times" aria-hidden="true"></i></button>
@@ -109,7 +109,7 @@
         </div>
       </div>
 
-      <div class="profilePage">
+      <div class="profilePage scale-in-top">
         <div class="profilePic">
           <img src="https://www.svgrepo.com/show/44183/male-user.svg" alt="">
         </div>
