--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
-<!-- Roboto and reader Pro - Fonts  -->
+  <!-- Roboto and reader Pro - Fonts  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;600&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,500&display=swap"
     rel="stylesheet">
 
+    <!-- Font awesome kit -->
     <script src="https://kit.fontawesome.com/280833cb08.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="favIcon.png" type="image/x-icon">
 </head>
-
 <body>
   <header>
     <div class="menu">
       <div class="menuIcon">
         <i class="fas fa-bars"></i>
       </div>
-      <div class="menuItems swing-in-left-fwd ">
+      <div class="menuItems slide-in-left">
         <button class="cancelMenu"><i class="fa fa-times" aria-hidden="true"></i></button>
         <p class="profileJS">Profile</p>
         <hr>
@@ -95,7 +95,7 @@
   <main>
     <!-- inside sections areYouSure and profile (total 2 divs) comes which shows or overlap the other changable divs -->
     <section>
-      <div class="areYouSure scale-in-top">
+      <div class="areYouSure scale-up-center">
         <div class="crossBtnh">
           <span>Please do Login First !</span>
           <button><i class="fa fa-times" aria-hidden="true"></i></button>
@@ -109,7 +109,7 @@
         </div>
       </div>
 
-      <div class="profilePage scale-in-top">
+      <div class="profilePage scale-up-center">
         <div class="profilePic">
           <img src="https://www.svgrepo.com/show/44183/male-user.svg" alt="">
         </div>
