--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         </div>
         <hr class="belowSignUpBtnHr">
         <div class="signLoginBtns signLoginBtns2">
-          <button>Guest</button>
+          <button class="guestJS">Guest</button>
         </div>
 
       </div>
