--- a/index.html
+++ b/index.html
@@ -346,6 +346,10 @@
 
       </div>
     </div>
+
+    <footer>
+      <p>Copyright @ 2021 Mobizone</p>
+    </footer>
   </main>
   <script src="Information.js"></script>
   <script src="SmallWorkingButtons.js"></script>
