--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="profile">
       <div class="insideProfile1">
         <div>
-          <p>Molik...</p>
+          <p>Profile...</p>
           <i class="fas fa-sort-down"></i>
         </div>
         <div>
